src/test/compile-fail/bad-module.rs
// error-pattern: unresolved import

fn main() { let foo = thing::len(~[]); }
